objects/AgileVizArt__Decision__c.object
<CustomObject>
    <description>Project based decision log to remember project decisions</description>
    <fields>
        <fullName>AgileVizArt__Decision_Date__c</fullName>
        <label>Decision Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Decision_Id__c</fullName>
        <formula>&quot;D-&quot; &amp; TEXT(AgileVizArt__Decision_Number__c)</formula>
        <inlineHelpText>Unique Id for decision by project</inlineHelpText>
        <label>Decision#</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Decision_Number__c</fullName>
        <description>Only used in background. Do not provide to end-users</description>
        <inlineHelpText>Unique Id for decision by project</inlineHelpText>
        <label>Decision Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Decision__c</fullName>
        <label>Decision</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Global_Id__c</fullName>
        <displayFormat>D-{0}</displayFormat>
        <inlineHelpText>Provides an unique id for this epic story across all projects. Use this number to find epic stories uniquely.</inlineHelpText>
        <label>Global Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Project__c</fullName>
        <label>Project</label>
        <referenceTo>AgileVizArt__Project__c</referenceTo>
        <relationshipLabel>Decisions</relationshipLabel>
        <relationshipName>Decisions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Reason_Why__c</fullName>
        <inlineHelpText>Describes background or initial situation</inlineHelpText>
        <label>Reason Why</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AgileVizArt__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Application</fullName>
                </value>
                <value>
                    <fullName>Budget</fullName>
                </value>
                <value>
                    <fullName>Design</fullName>
                </value>
                <value>
                    <fullName>Integration</fullName>
                </value>
                <value>
                    <fullName>Scope</fullName>
                </value>
                <value>
                    <fullName>Setup</fullName>
                </value>
                <value>
                    <fullName>Time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AgileVizArt__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Log team member that decided</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Decisions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Decision</label>
    <nameField>
        <label>Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Decisions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>